we can publish news now

--- a/public/tpls/login.tpl.html
+++ b/public/tpls/login.tpl.html
@@ -6,7 +6,7 @@
     </tr>
 
     <tr>
-        <td height="180" valign="top" ng-controller="login">
+        <td height="180" valign="top">
             <label class="sr-only" for="username">用户名</label>
             <input class="form-control" id="username" name="username" type="text"  placeholder="用户名" ng-model="form.username"/>
             <label class="sr-only" for="password">密码</label>
