--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="router.js"></script>
 <script src="app.js"></script>
+<script src="factory.js"></script>
 <!--<base target="_blank">--><base href="." target="_blank">
 
 
