--- a/public/tpls/news-detail.tpl.html
+++ b/public/tpls/news-detail.tpl.html
@@ -18,7 +18,7 @@
                 <tbody>
                 <tr>
                     <td align="left" style="padding:5px;">
-                        <div id="content" ng-bind-html="news_list[$routeParams.index].content | richtext"></div>
+                        <div id="content" ng-bind-html="news_dic[router.current.params.news_id].content | richtext"></div>
                     </td>
                 </tr>
                 </tbody>
