now we can update news

--- a/public/tpls/editor.tpl.html
+++ b/public/tpls/editor.tpl.html
@@ -7,8 +7,8 @@
 
     <tr>
         <td height="180" valign="top">
-            <label for="title">标题</label>
-            <input class="form-control" id="title" name="title" type="text"  placeholder="题目" ng-model="form.title"/>
+            <!--<label for="title">标题</label>-->
+            <input class="form-control" id="title" name="title" type="text"  placeholder="标题" ng-model="form.title"/>
             <textarea id="content" ck-editor ng-model="form.content"></textarea>
             <button class="btn" ng-click="publish();">发布新闻</button>
         </td>
