--- a/public/tpls/editor.tpl.html
+++ b/public/tpls/editor.tpl.html
@@ -1,7 +1,7 @@
 <table width="100%" style="border:#FCC8BC 1px solid;margin:5px;">
     <tr>
         <td>
-            <div class="zuocebiao"><span><a href="#/login">登录</a></span></div>
+            <div class="zuocebiao"><span><a href="#/login">编辑</a></span></div>
         </td>
     </tr>
 
