做了编辑和发布新闻的按钮

--- a/public/tpls/news.tpl.html
+++ b/public/tpls/news.tpl.html
@@ -8,7 +8,9 @@
                 <tbody><tr>
                     <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">新闻资讯</td>
                     <td width="78%"></td>
-                    <td width="8%"></td>
+                    <td width="8%">
+                        <a ng-if="user.id" ng-href="#/publish">发布新闻</a>
+                    </td>
                 </tr>
                 </tbody></table>
 
