--- a/public/tpls/news-detail.tpl.html
+++ b/public/tpls/news-detail.tpl.html
@@ -7,7 +7,7 @@
                     <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">新闻资讯</td>
                     <td width="78%"></td>
                     <td width="8%">
-                        <a ng-if="user.id" ng-href="#/update/#{router.current.params.news_id}">编辑</a>
+                        <a ng-if="user.id" ng-href="#/update/{{router.current.params.news_id}}">编辑</a>
                     </td>
                 </tr>
                 </tbody></table>
