--- a/public/tpls/news.tpl.html
+++ b/public/tpls/news.tpl.html
@@ -35,6 +35,7 @@
                                                 </td>
 
                                                 <td style="text-align:right" class="">
+                                                    <a ng-if="user.id" ng-href="#/update/{{news.id}}">编辑</a>
                                                     <a ng-if="user.id" ng-click="delete(news);">删除</a>
                                                     {{news.created_at | date:"yyyy-MM-dd"}}
                                                 </td>
