--- a/public/tpls/about.tpl.html
+++ b/public/tpls/about.tpl.html
@@ -8,7 +8,7 @@
 
     <tr>
         <td height="180" valign="top">
-            <div ng-bind-html="about | richtext"></div>
+            <div ng-bind-html="about.content | richtext"></div>
         </td>
     </tr>
 </table>
