--- a/public/tpls/index.tpl.html
+++ b/public/tpls/index.tpl.html
@@ -11,7 +11,7 @@
 
                 <tr>
                     <td height="180" valign="top" class="full" style="padding:5px;">
-                        <div ng-bind-html="about | richtext"></div>
+                        <div ng-bind-html="about.content | richtext"></div>
                     </td>
                 </tr>
                 </tbody></table>
