--- a/public/tpls/about.tpl.html
+++ b/public/tpls/about.tpl.html
@@ -1,8 +1,16 @@
 
 <table width="100%" style="border:#FCC8BC 1px solid;margin:5px;">
     <tr>
-        <td>
-            <div class="zuocebiao"><span><a href="#/about">协会简介</a></span></div>
+        <td height="26" style="background:url(index_files/thead.jpg) no-repeat left;">
+            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <tbody><tr>
+                    <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">协会简介</td>
+                    <td width="78%"></td>
+                    <td width="8%">
+                        <a ng-if="user.id" ng-href="#/publish">修改</a>
+                    </td>
+                </tr>
+                </tbody></table>
         </td>
     </tr>
 
