now we can edit richtext through webpage

--- a/public/tpls/about.tpl.html
+++ b/public/tpls/about.tpl.html
@@ -7,7 +7,7 @@
                     <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">协会简介</td>
                     <td width="78%"></td>
                     <td width="8%">
-                        <a ng-if="user.id" ng-href="#/publish">修改</a>
+                        <a ng-if="user.id" ng-href="#/edit-richtext/about">修改</a>
                     </td>
                 </tr>
                 </tbody></table>
