--- a/public/notify.tpl.html
+++ b/public/notify.tpl.html
@@ -9,10 +9,11 @@
     <tr>
         <td>
             <div class="zuocebiao"><span>公 告</span></div>
+            <a href="#/edit-richtext/notify" ng-if="user.id">修改</a>
         </td>
     </tr>
     <tr>
-        <td height="200" style="padding-bottom: 5px; padding-top: 5px; padding-left: 5px; padding-right: 5px"><marquee direction="up" height="205" width="100%" scrollamount="1" style="height: 210px; width: 100%;" onMouseOver="this.stop()" onMouseOut="this.start()" ng-bind-html="notify | richtext">
+        <td height="200" style="padding-bottom: 5px; padding-top: 5px; padding-left: 5px; padding-right: 5px"><marquee direction="up" height="205" width="100%" scrollamount="1" style="height: 210px; width: 100%;" onMouseOver="this.stop()" onMouseOut="this.start()" ng-bind-html="notify.content | richtext">
         </marquee></td>
     </tr>
     </tbody>
