--- a/public/tpls/contact.tpl.html
+++ b/public/tpls/contact.tpl.html
@@ -1,14 +1,22 @@
 
 <table width="100%" style="border:#FCC8BC 1px solid;margin:5px;">
     <tr>
-        <td>
-            <div class="zuocebiao"><span><a href="#/contact">联系方式</a></span></div>
+        <td height="26" style="background:url(index_files/thead.jpg) no-repeat left;">
+            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <tbody><tr>
+                    <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">联系方式</td>
+                    <td width="78%"></td>
+                    <td width="8%">
+                        <a ng-if="user.id" ng-href="#/edit-richtext/contact">修改</a>
+                    </td>
+                </tr>
+                </tbody></table>
         </td>
     </tr>
 
     <tr>
         <td height="180" valign="top">
-            <div ng-bind-html="contact | richtext">
+            <div ng-bind-html="contact.content | richtext">
             </div>
         </td>
     </tr>
