now we can get the policy

--- a/public/tpls/policy.tpl.html
+++ b/public/tpls/policy.tpl.html
@@ -26,7 +26,7 @@
                                 <tbody><tr>
                                     <td>
                                         <span class="">·</span><span class="hidden"><img src="./index_files/tubiao01.gif"></span>
-                                        <a href="#/policy/{{$index}}" title="{{policy.title}}">{{policy.title}}</a>
+                                        <a href="#/policy/{{policy.id}}" title="{{policy.title}}">{{policy.title}}</a>
                                     </td>
                                     <td style="text-align:right" class="">
                                         <a ng-if="user.id" ng-href="#/update/{{policy.id}}">编辑</a>
