--- a/public/tpls/policy-detail.tpl.html
+++ b/public/tpls/policy-detail.tpl.html
@@ -1,14 +1,31 @@
-
-<table width="100%" style="border:#FCC8BC 1px solid;margin:5px;">
+<table width="100%" border="0" cellpadding="0" cellspacing="1" style="border:#FCC8BC 1px solid; margin:5px;">
+    <tbody>
     <tr>
-        <td>
-            <div class="zuocebiao"><span><a href="#/policy">政策文件</a></span></div>
+        <td height="26" style="background:url(index_files/thead.jpg) no-repeat left;">
+            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <tbody><tr>
+                    <td width="14%" style="font-size:14px;font-weight:bold;color:#FFFFFF;" align="center">政策文件</td>
+                    <td width="78%"></td>
+                    <td width="8%">
+                        <a ng-if="user.id" ng-href="#/edit/{{router.current.params.policy_id}}">编辑</a>
+                    </td>
+                </tr>
+                </tbody></table>
+
         </td>
     </tr>
-
     <tr>
-        <td class="full">
-            <div ng-bind-html="policy_list[$routeParams.index].content | richtext"></div>
+        <td  class="full">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tbody>
+                <tr>
+                    <td align="left" style="padding:5px;">
+                        <div id="content" ng-bind-html="policy_dic[router.current.params.policy_id].content | richtext"></div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </td>
     </tr>
+    </tbody>
 </table>
