fixed many bugs

--- a/public/tpls/editor.tpl.html
+++ b/public/tpls/editor.tpl.html
@@ -10,7 +10,7 @@
             <!--<label for="title">标题</label>-->
             <input class="form-control" id="title" name="title" type="text"  placeholder="标题" ng-model="form.title"/>
             <textarea id="content" ck-editor ng-model="form.content"></textarea>
-            <button class="btn" ng-click="edit();">修改</button>
+            <button class="btn" ng-click="update();">修改</button>
         </td>
     </tr>
 </table>
